# dotfiles

./: .clang  .gitignore  .gitmodules  .profile  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists_ProjectWithLibraries.txt  README.md  _vimrc  ginit.vim  init.vim  kwon-young.profile  makefile  pass  tmux.conf  tmux_seoul256.conf  vostro_bug.sh  wallpapers.py  zshrc
Edwin_config/: .pam_environment
Edwin_config/.config/systemd/user/: ssh-agent.service
Ellana_config/: .pam_environment
Ellana_config/.config/systemd/user/: languagetool-user.service
konsole_config/.local/share/konsole/: kwon-young.profile  seoul256.colorscheme
latexmk_config/: .latexmkrc
neovim_config/.local/share/nvim/: backup  undo
neovim_luaconfig/.config/nvim/: init.lua
neovim_luaconfig/.config/nvim/lua/lspconfig/: prolog_lsp.lua
sun_keyboard_config/: 70-keyboard.hwdb
tmux_config/: .tmux.conf
tmux_old/: .tmux.conf
vim_config/.vim/: init.vim  settings.json
vim_config/.vim/UltiSnips/: tex.snippets
vim_config/.vim/after/syntax/: tex.vim
vim_config/.vim/ftplugin/: tex.vim
vim_config/.vim/spell/: en.utf-8.add  en.utf-8.add.spl
zsh_config/: .zshrc
